# back

./: LICENSE  README.md  docker-compose.yaml
config/: config.env
data/: models.json
py/: README.md  db.sqlite  pyproject.toml  requirements.txt
py/nnhub/api/: main.py
py/nnhub/api/image_classification_model/: router.py
py/nnhub/api/speech_to_text_model/: router.py
py/nnhub/domain/: types.py
py/nnhub/infrastructure/: db_settings.py  gunicorn.conf.py  gunicorn_config.py  model_settings.py  server_config.py
src/: pyproject.toml
src/nnhub/: Dockerfile  requirements.txt
src/nnhub/api/: main.py
src/nnhub/api/config/: gunicorn_config.py  server_config.py
src/nnhub/api/image_classification_model/: router.py
src/nnhub/api/image_segmentation_model/: router.py
src/nnhub/api/large_language_model/: router.py
src/nnhub/api/speech_to_text_model/: router.py
src/nnhub/domain/: model.py  types.py
src/nnhub/infrastructure/: db.py  redis.py
