[tool.poetry]
name = "nnhub"
version = "0.1.0"
description = ""
authors = ["Gleb Antonevich <foryourselfand@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
gunicorn = "^21.2.0"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.1.0"
aiosqlite = "^0.19.0"
python-multipart = "^0.0.6"
lorem = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
