[tool.poetry]
name = "nnhub"
version = "0.1.0"
description = ""
authors = ["Gleb Antonevich <foryourselfand@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
gunicorn = "^21.2.0"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.1.0"
aiosqlite = "^0.19.0"
python-multipart = "^0.0.6"
lorem = "^0.1.1"
numpy = "^1.26.3"
pillow = "^10.2.0"
transformers = "^4.38.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
